fix(Collapsible): add text-align (#185)

--- a/src/Collapsible/Collapsible.less
+++ b/src/Collapsible/Collapsible.less
@@ -7,12 +7,14 @@
 			margin-right: 0;
 			margin-left: 0.5em;
 			float: right;
+			text-align: right;
 		}
 
 		.mw-content-rtl & {
 			margin-right: 0.5em;
 			margin-left: 0;
 			float: left;
+			text-align: left;
 		}
 	}
 }
